--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,6 +19,9 @@
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  bottom: 0px;
+  width: 100vw;
 }
 
 .footer a {
